Fix display on mobile

--- a/app/assets/stylesheets/pages/profile_page.sass
+++ b/app/assets/stylesheets/pages/profile_page.sass
@@ -691,6 +691,11 @@
                   .upload_btn
                     height: 130px
                     width: 130px
+                    opacity: 0
+                    position: absolute
+                    top: 0
+                    left: 0
+                    cursor: pointer
 
         // Listed Photo
 
@@ -2242,9 +2247,10 @@
             li
               @include border-radius(5px)
               border: 1px solid $color_border
-              display: inline-block
+              display: block
               position: relative
               overflow: hidden
+              float: left
               height: 90px
               width: 90px
               margin-right: 10px
@@ -2255,13 +2261,13 @@
               img
                 height: 90px
               .delete_button
-                @include border-radius(0 0 0 5px)
+                @include border-radius(5px 5px 0 0)
                 background-color: $color_pink
                 color: #FFFFFF
                 font-size: 11px
-                padding: 2px 5px 4px
+                padding: 4px 7px 6px
                 position: absolute
-                top: 0
+                bottom: 0
                 right: 0
                 .fa.fa-times
                   &:before
@@ -2271,22 +2277,23 @@
               &.upload_custom
                 background-color: #FFFFFF
                 border: none
-                margin-right: 0
+                margin: 0
                 .upload_custom_btn
                   @include green-area
-                  cursor: pointer
                   color: #FFFFFF
-                  height: 130px
-                  margin-right: 0
                   text-align: center
+                  margin: 0
+                  padding: 0
+                  height: 90px
+                  width: 90px
                   i.fa.fa-picture-o
                     font-size: 13px
                     line-height: 16px
-                    margin-top: 12px
+                    margin-top: 5px
                     &:before
-                      font-size: 28px
                       display: block
-                      margin-bottom: 7px
+                      font-size: 24px
+                      margin: 7px 0
                   .custom_image
                     position: absolute
                     top: -1px
@@ -2296,7 +2303,9 @@
                     width: 90px
                     padding: 0
                     top: 0
-
+                    position: absolute
+                    cursor: pointer
+                    opacity: 0
 
           .photo_bg
             padding: 5px
